# prompt-middleware

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/extension/: eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/local-server/: Cargo.toml
apps/local-server/src/: main.rs
apps/local-server/src/config/: mod.rs
apps/local-server/src/errors/: mod.rs
apps/local-server/src/middleware/: cors.rs
apps/local-server/src/routes/: health.rs  mod.rs  optimize.rs
apps/local-server/src/state/: mod.rs
crates/prompt-engine/: Cargo.toml
crates/prompt-engine-wasm/: Cargo.toml
crates/prompt-engine-wasm/src/: lib.rs
crates/prompt-engine/benches/: optimize.rs
crates/prompt-engine/src/: lib.rs
crates/prompt-engine/src/builder/: mod.rs  prompt_builder.rs
crates/prompt-engine/src/classification/: domain_classifier.rs  mod.rs
crates/prompt-engine/src/config/: mod.rs
crates/prompt-engine/src/detection/: intent_detector.rs  language_detector.rs  mod.rs
crates/prompt-engine/src/domain/: intent.rs  language.rs  mod.rs  prompt.rs  prompt_domain.rs  scoring.rs  user_preferences.rs
crates/prompt-engine/src/quality/: mod.rs  quality_checker.rs
crates/prompt-engine/src/safety/: input.rs
crates/prompt-engine/src/templates/: mod.rs  registry.rs  renderer.rs  selector.rs
crates/prompt-engine/src/types/: mod.rs
crates/prompt-engine/templates/business/: default.toml
crates/prompt-engine/templates/code/: default.toml
crates/prompt-engine/templates/cybersecurity/: default.toml
crates/prompt-engine/templates/finance/: default.toml
crates/prompt-engine/templates/general/: default.toml
crates/prompt-engine/templates/hr/: default.toml
crates/prompt-engine/templates/learning/: default.toml
crates/prompt-engine/templates/technical_project/: default.toml
crates/prompt-engine/tests/: engine_tests.rs  properties.rs
crates/shared-types/: Cargo.toml
docs/cdc/: CDC-v1.0.md
docs/decisions/: ADR-0001-local-first.md  ADR-0002-pure-prompt-engine.md  ADR-0003-platform-adapters.md
fixtures/prompts/: simple-learning-fr.json
schemas/: optimize-request.schema.json  optimize-response.schema.json
scripts/: build-wasm.sh  wasm-smoke.mjs
(+21 files in other folders)
