[package]
name = "prompt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "prompt-optimize"
path = "src/main.rs"

[dependencies]
prompt-engine = { path = "../../crates/prompt-engine" }
shared-types = { path = "../../crates/shared-types" }
serde_json.workspace = true
