[package]
name = "local-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
http.workspace = true
prompt-engine = { path = "../../crates/prompt-engine" }
serde.workspace = true
serde_json.workspace = true
shared-types = { path = "../../crates/shared-types" }
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

