[package]
name = "prompt-engine-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
prompt-engine = { path = "../prompt-engine" }
shared-types = { path = "../shared-types" }
serde_json.workspace = true
wasm-bindgen.workspace = true
