[package]
name = "prompt-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
shared-types = { path = "../shared-types" }
thiserror.workspace = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
proptest = "1"

[[bench]]
name = "optimize"
harness = false

